--- a/index.html
+++ b/index.html
@@ -1,12 +1,5 @@
-{\rtf1\ansi\ansicpg1252\cocoartf1187\cocoasubrtf340
-{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
-{\colortbl;\red255\green255\blue255;}
-\margl1440\margr1440\vieww10800\viewh8400\viewkind0
-\deftab720
-\pard\pardeftab720
-
-\f0\fs22 \cf0 <html>\
-	<body>\
-		<h1>Hello World!</h1>\
-	</body>\
-</html>}
+<html>
+<body>
+<h1>Hello World!</h1>
+</body>
+</html>
