--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
-<body>
-<h1>Hello World!</h1>
-</body>
+	<body>
+		<h1>Hello World!</h1>
+		<ul>
+			<li>
+				<a href="bio.html">Biography</a>
+			</li>
+		</ul>
+	</body>
 </html>
